# TartanMaroon

./: .dockerignore  .env.example  .gitignore  Dockerfile  Procfile  README.md  pyproject.toml  railway.json
backend/: auth.py  database.py  profile_map.py  server.py
data/_to_review/: Course_Catalog_Carnegie_Mellon.md  README.md
data/academics/academic_resource_center/: Academic_Resource_Center_–_Scotty.md  (+2 more)
data/courses/: 02-201.json  02-223.json  02-250.json  02-251.json  02-261.json  02-262.json  02-318.json  02-510.json  03-011.json  03-110.json  03-113.json  03-115.json  03-116.json  03-117.json  03-118.json  03-119.json  03-120.json  03-121.json  03-124.json  03-125.json  03-126.json  03-127.json  03-128.json  03-129.json  03-131.json  03-132.json  03-133.json  03-135.json  03-140.json  03-151.json  03-161.json  03-201.json  03-202.json  03-206.json  03-210.json  03-220.json  03-230.json  03-231.json  03-232.json  03-240.json  (+2438 more)
data/programs/: Policy_on_Changing_Majors_–_Scotty.md  course_prerequisites.md
data/schedules/: Fall_2024_courses.json  Fall_2025_courses.json  Spring_2025_courses.json  cmu_microcourses_2026_2027.json  cmuq-2026-2027-academic-calendar.json  cmuq-academic-calendar_25_26.json  schedule_2026_spring.json
frontend/: .env.example  Dockerfile  next.config.js  package-lock.json  package.json  tailwind.config.ts
src/advisor/: agent.py  cli.py  config.py  models.py  server.py  streaming.py  triage.py
tests/: test_advising_tools.py  test_backend_mapping.py  test_corpus_and_program_tools.py  test_prereq_parser.py  test_requirements.py
(+147 files in other folders)
