[project]
name = "cmuq-advisor"
version = "0.1.0"
description = "Agentic-search academic advising assistant for CMU-Qatar"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "pydantic>=2.7",
    "pydantic-ai>=0.0.20",
    "pydantic-settings>=2.2",
    "openai>=1.40",
    "networkx>=3.2",
    "numpy>=1.26",
    "typer>=0.12",
    "rich>=13.7",
    # web backend
    "fastapi>=0.110",
    "uvicorn[standard]>=0.29",
    "motor>=3.4",
    "python-jose[cryptography]>=3.3",
    "email-validator>=2.1",
]

[project.scripts]
advisor = "advisor.cli:main"

[project.optional-dependencies]
dev = ["pytest>=8.0"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/advisor"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
pythonpath = ["src", "."]
